--- a/doc/faq.txt
+++ b/doc/faq.txt
@@ -29,4 +29,28 @@
      О: Перенаправлять в ящик своей должности.
 
   10. В: Как получить права на задачи другой должности?
-      О: Создать временное назначение на эту должность. При завершении назначения человек должен терять права на задачи.
+      О: Создать временное назначение на эту должность. При завершении назначения человек должен терять права на задачи. (ВЕРНУТЬ ЭТОТ СКРИПТ)
+
+
+
+ВОПРОСЫ:
+1. Если у пользователя несколько назначений с одинаковыми названиями должностей. Как в правом верхнем углу их отличать? 
+
+2. Можно ли создавать документ под Назначениями вида роль и помощник, Назначение на удаленную должность?
+
+3. Можно ли пользователям выбирать в качестве получателя Назначение на удаленную должность? 
+Назначение на удаленную должность - создается в случае потребности работать с задачами и докуемнтами удаленной должности.
+
+4. Во время делегирования получены права на документы и задачи. Делегирование удалено. 
+Что делать с правами на задачи, с правами на документы по задачам, с правами на документы созданные?
+
+5. Поиск. Как найти документ по реквизиту типа Назначение, если оно удалено?
+Вариант: в выпадающих списках поиска отображать все Назначения, в том числе удаленные и всех видов. 
+
+6. Нужно ли ввести виды Назначений с помощью специального предиката со списком или нескольких булинов? 
+(Виды назначений: роль, помощник, обычный заместитель, на удаленную должность)
+
+7. Не нужен ли нам механизм полной передачи прав на документы и задачи при удалении должности и создания на ее основе новой? 
+Чтобы избежать делегирования, потому что это делегирование приется делать навсегда.
+Как тогда добраться до задач от удаленной должности?
+Плюс, что нельзя будет случайно создать докмент под удаленным назначением.
